refactor: fetchPartitionedStocksForDelisted 메서드의 로직을 하나의 람다 스트림으로 변경